--- a/calculator/app/src/main/res/layout/putong.xml
+++ b/calculator/app/src/main/res/layout/putong.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context = "com.example.a10518.calculator.calculator">
 
-    <EditText
+    <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,7 +35,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="20sp"
-                android:text="C"/>
+                android:text="C"
+                android:background="#ee82ee"
+                android:textColor="#FFF"
+                android:layout_marginLeft="1dp"
+                android:layout_marginBottom="1dp"/>
 
             <Button
                 android:id="@+id/div"
@@ -43,7 +47,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="20sp"
-                android:text="/"/>
+                android:text="/"
+                android:background="#ee82ee"
+                android:textColor="#FFF"
+                android:layout_marginLeft="1dp"
+                android:layout_marginBottom="1dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -58,7 +66,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="20sp"
-                android:text="Backspace"/>
+                android:text="Backspace"
+                android:background="#ee82ee"
+                android:textColor="#FFF"
+                android:layout_marginLeft="1dp"
+                android:layout_marginBottom="1dp"/>
 
         </LinearLayout>
 
@@ -77,7 +89,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="7"/>
+            android:text="7"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/eight"
@@ -85,7 +100,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="8"/>
+            android:text="8"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/nine"
@@ -93,7 +112,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="9"/>
+            android:text="9"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/mul"
@@ -101,7 +124,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="*"/>
+            android:text="*"
+            android:background="#ee82ee"
+            android:textColor="#FFF"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
     </LinearLayout>
 
@@ -117,7 +144,10 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="4"/>
+            android:text="4"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/five"
@@ -125,7 +155,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="5"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/six"
@@ -133,7 +167,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="6"/>
+            android:text="6"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/sub"
@@ -141,7 +179,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="-"/>
+            android:text="-"
+            android:background="#ee82ee"
+            android:textColor="#FFF"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
     </LinearLayout>
     <LinearLayout
@@ -156,7 +198,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="1"/>
+            android:text="1"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/two"
@@ -164,7 +210,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="2"/>
+            android:text="2"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/three"
@@ -172,7 +222,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="3"/>
+            android:text="3"
+            android:background="#FFF"
+            android:textColor="#ee82ee"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
         <Button
             android:id="@+id/add"
@@ -180,7 +234,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:textSize="20sp"
-            android:text="+"/>
+            android:text="+"
+            android:background="#ee82ee"
+            android:textColor="#FFF"
+            android:layout_marginLeft="1dp"
+            android:layout_marginBottom="1dp"/>
 
     </LinearLayout>
     <LinearLayout
@@ -200,7 +258,10 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="20sp"
-                android:text="0"/>
+                android:text="0"
+                android:background="#FFF"
+                android:textColor="#ee82ee"
+                android:layout_marginBottom="1dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -215,7 +276,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="20sp"
-                android:text="."/>
+                android:text="."
+                android:background="#FFF"
+                android:textColor="#ee82ee"
+                android:layout_marginLeft="1dp"
+                android:layout_marginBottom="1dp"/>
 
             <Button
                 android:id="@+id/equal"
@@ -223,7 +288,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textSize="20sp"
-                android:text="="/>
+                android:text="="
+                android:background="#ee82ee"
+                android:textColor="#FFF"
+                android:layout_marginLeft="1dp"
+                android:layout_marginBottom="1dp"/>
         </LinearLayout>
 
 
