--- a/calculator/app/src/main/res/layout/two.xml
+++ b/calculator/app/src/main/res/layout/two.xml
@@ -33,7 +33,7 @@
                 android:textSize="16pt"
                 android:layout_marginBottom="1dp"
                 android:layout_marginLeft="1dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:paddingBottom="7dp"
                 android:text="㎡"/>
@@ -45,7 +45,7 @@
                 android:layout_marginBottom="1dp"
                 android:layout_marginLeft="1dp"
                 android:paddingBottom="7dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:text="x!"
                 />
@@ -56,7 +56,7 @@
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:layout_marginLeft="1dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:text="C"
                 />
@@ -65,7 +65,7 @@
                 android:id="@+id/back"
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:textSize="12pt"
                 android:layout_marginLeft="1dp"
@@ -82,7 +82,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="7" />
@@ -93,7 +93,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="8"  />
@@ -104,7 +104,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="9" />
@@ -114,7 +114,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:textSize="12pt"
                 android:layout_marginBottom="1dp"
@@ -131,7 +131,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="4" />
@@ -142,7 +142,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="5"  />
@@ -153,7 +153,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="6" />
@@ -163,7 +163,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:textSize="12pt"
                 android:layout_marginBottom="1dp"
@@ -180,7 +180,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="1" />
@@ -191,7 +191,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="2"  />
@@ -202,7 +202,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="3" />
@@ -212,7 +212,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:textSize="12pt"
                 android:layout_marginBottom="1dp"
@@ -228,7 +228,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="." />
@@ -239,7 +239,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="20pt"
                 android:layout_marginBottom="1dp"
                 android:text="0"  />
@@ -250,7 +250,7 @@
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
                 android:background="#FFFFFF"
-                android:textColor="#24A9E1"
+                android:textColor="#ee82ee"
                 android:textSize="12pt"
                 android:layout_marginBottom="1dp"
                 android:text="=" />
@@ -260,7 +260,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="0.25"
                 android:layout_marginLeft="1dp"
-                android:background="#24A9E1"
+                android:background="#ee82ee"
                 android:textColor="#FFF"
                 android:textSize="12pt"
                 android:layout_marginBottom="1dp"
