--- a/MusicPlayer/app/src/main/res/layout/playlist.xml
+++ b/MusicPlayer/app/src/main/res/layout/playlist.xml
@@ -8,7 +8,8 @@
         android:id="@+id/musicList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@mipmap/background">
+        android:background="@mipmap/background"
+        android:clickable="true">
 
     </ListView>
 
